# LootTracker

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
DropLogger/: DropLogger.sln
DropLogger/DropLogger/: Config.cs  DropLogger.csproj  DropLogger.json  Plugin.cs  packages.lock.json
DropLogger/DropLogger/Logic/: DropTracker.cs
DropLogger/DropLogger/Windows/: ConfigWindow.cs
DropLogger/Server/: schema.sql
DropLogger/Server/src/: main.rs  models.rs
Server/: .env  Cargo.toml  docker-compose.yml
Server/src/: entities.rs  handlers.rs  main.rs  state.rs
Server/templates/: stats.html
