[package]
name = "ffxiv-drop-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

redis = { version = "0.32.7", features = ["tokio-comp"] }

chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"

askama = "0.14.0"
askama_axum = "0.4.0"